style.css
@charset "UTF-8";

/* ==========================================================================
   Main Stylesheet
   Author: Anne-Cecile
   Description: Styles for the main site layout QR Code component
   ========================================================================== */

body {
  display: flex;
  flex-flow: column;
  align-items: center;
  background-color: #d5e1ef;
}

img {
  height: 288px;
  width: 288px;
  border-radius: 10px;
}

.text-container {
  display: flex;
  flex-flow: column;
  row-gap: 16px;
  width: 288px;
  flex: 1;
}

h1 {
  font-family: "Outfit Bold", Arial, sans-serif;
  font-size: 22px;
  line-height: 120%;
  letter-spacing: 0px;
  color: #1f314f;
  width: 100%;
  align-items: flex-start;
  text-align: center;
  margin: 0;
}

p {
  font-family: "Outfit Regular", Arial, sans-serif;
  font-size: 15px;
  line-height: 140%;
  letter-spacing: 0.2px;
  color: #68778d;
  align-items: flex-end;
  width: 100%;
  text-align: center;
  margin: 0;
  flex: 1;
}

.flex-container {
  display: flex;
  flex-flow: column;
  row-gap: 24px;
  height: 443px;
  width: 288px;
  border-radius: 20px;
  background-color: #ffffff;
  padding-top: 16px;
  padding-left: 16px;
  padding-right: 16px;
  padding-bottom: 40px;
}

.attribution {
  font-size: 11px;
  text-align: center;
}

.attribution a {
  color: hsl(228, 45%, 44%);
}

